<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_stack</name>
  <version>0.0.0</version>
  <description>Top level bringup scripts and config for home robot project</description>
  <maintainer email="emerson.b.knapp@gmail.com">Emerson Knapp</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- For using the Neato Botvac mobile base -->
  <exec_depend>neato_botvac</exec_depend>
  <exec_depend>neato_description</exec_depend>
  <exec_depend>neato_gazebo</exec_depend>

  <!-- For using the Kobuki mobile base -->
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
  <exec_depend>turtlebot2_drivers</exec_depend>
  <exec_depend>kobuki_description</exec_depend>
  <exec_depend>turtlebot_description</exec_depend>

  <!-- Common IO drivers -->
  <exec_depend>joy_driver</exec_depend>

  <!-- Brains -->
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>cartogapher_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <!-- Visualization -->
  <exec_depend>rviz_plugin_tutorials</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
