<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prometheus_exporter</name>
  <version>0.0.0</version>
  <description>Listens to topics to expose fields for Prometheus scraping.</description>
  <maintainer email="me@emersonknapp.com">Emerson Knapp</maintainer>
  <license>Apache 2.0</license>

  <depend>rclpy</depend>
  <!--
  TODO https://github.com/ros/rosdistro/pull/24717
  <depend>python3-prometheus-client</depend>
  -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
