<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_runtime</name>
  <version>0.0.0</version>
  <description>On-robot component of the robot stack. No GUI dependencies!</description>
  <maintainer email="emerson.b.knapp@gmail.com">Emerson Knapp</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Kobuki Base -->
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
  <exec_depend>turtlebot2_drivers</exec_depend>
  <exec_depend>kobuki_description</exec_depend>
  <exec_depend>turtlebot_description</exec_depend>
  <exec_depend>joy</exec_depend>

  <!-- Compute Battery -->
  <exec_depend>smart_battery_driver</exec_depend>

  <!-- Not hardware specific -->
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>parking</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
