<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_runtime</name>
  <version>0.0.0</version>
  <description>On-robot component of the robot stack. No GUI dependencies!</description>
  <maintainer email="emerson.b.knapp@gmail.com">Emerson Knapp</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Kobuki Base -->
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
  <exec_depend>turtlebot2_drivers</exec_depend>
  <exec_depend>kobuki_description</exec_depend>
  <exec_depend>turtlebot_description</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_indicators</exec_depend>

  <!-- Not hardware specific -->
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>cmd_vel_mux</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>parking</exec_depend>
  <exec_depend>launch_candy</exec_depend>
  <exec_depend>prometheus_exporter</exec_depend>

  <!-- cli -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros2action</exec_depend>
  <exec_depend>ros2component</exec_depend>
  <exec_depend>ros2doctor</exec_depend>
  <exec_depend>ros2interface</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros2lifecycle</exec_depend>
  <exec_depend>ros2msg</exec_depend>
  <exec_depend>ros2multicast</exec_depend>
  <exec_depend>ros2node</exec_depend>
  <exec_depend>ros2param</exec_depend>
  <exec_depend>ros2pkg</exec_depend>
  <exec_depend>ros2run</exec_depend>
  <exec_depend>ros2service</exec_depend>
  <exec_depend>ros2srv</exec_depend>
  <exec_depend>ros2topic</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
