<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_stack</name>
  <version>0.0.0</version>
  <description>Top level bringup scripts and config for operator side of robot stack</description>
  <maintainer email="emerson.b.knapp@gmail.com">Emerson Knapp</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>robot_runtime</exec_depend>
  <exec_depend>rviz_plugin_tutorials</exec_depend>
  <exec_depend>parking_rviz_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
